[gd_scene load_steps=9 format=3 uid="uid://bek2e8iql87yy"]

[ext_resource type="Texture2D" uid="uid://ibe10rob2eog" path="res://GFX/Tilesets/tilesheet_complete.png" id="1_4ltib"]
[ext_resource type="Script" path="res://level_map.gd" id="2_gf2dy"]
[ext_resource type="Script" path="res://enemy_controller.gd" id="3_5hvvk"]
[ext_resource type="PackedScene" uid="uid://cxjlf4dvf5wm6" path="res://enemy_actor.tscn" id="5_0d166"]
[ext_resource type="Script" path="res://map_camera.gd" id="6_h63dk"]
[ext_resource type="PackedScene" uid="uid://btsfq0tdt0owd" path="res://actor.tscn" id="6_lhelj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xrsnc"]
texture = ExtResource("1_4ltib")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
20:6/0/terrain_set = 1
20:6/0/terrain = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
21:13/0/terrain_set = 0
21:13/0/terrain = 0
21:13/0/terrains_peering_bit/right_side = 0
21:13/0/terrains_peering_bit/bottom_right_corner = 0
21:13/0/terrains_peering_bit/bottom_side = 0
22:13/0 = 0
22:13/0/terrain_set = 0
22:13/0/terrain = 0
22:13/0/terrains_peering_bit/right_side = 0
22:13/0/terrains_peering_bit/bottom_right_corner = 0
22:13/0/terrains_peering_bit/bottom_side = 0
22:13/0/terrains_peering_bit/bottom_left_corner = 0
22:13/0/terrains_peering_bit/left_side = 0
23:13/0 = 0
23:13/0/terrain_set = 0
23:13/0/terrain = 0
23:13/0/terrains_peering_bit/bottom_side = 0
23:13/0/terrains_peering_bit/bottom_left_corner = 0
23:13/0/terrains_peering_bit/left_side = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
21:14/0/terrain_set = 0
21:14/0/terrain = 0
21:14/0/terrains_peering_bit/right_side = 0
21:14/0/terrains_peering_bit/bottom_right_corner = 0
21:14/0/terrains_peering_bit/bottom_side = 0
21:14/0/terrains_peering_bit/top_side = 0
21:14/0/terrains_peering_bit/top_right_corner = 0
22:14/0 = 0
22:14/0/terrain_set = 0
22:14/0/terrain = 0
22:14/0/terrains_peering_bit/right_side = 0
22:14/0/terrains_peering_bit/bottom_right_corner = 0
22:14/0/terrains_peering_bit/bottom_side = 0
22:14/0/terrains_peering_bit/bottom_left_corner = 0
22:14/0/terrains_peering_bit/left_side = 0
22:14/0/terrains_peering_bit/top_left_corner = 0
22:14/0/terrains_peering_bit/top_side = 0
22:14/0/terrains_peering_bit/top_right_corner = 0
23:14/0 = 0
23:14/0/terrain_set = 0
23:14/0/terrain = 0
23:14/0/terrains_peering_bit/bottom_side = 0
23:14/0/terrains_peering_bit/bottom_left_corner = 0
23:14/0/terrains_peering_bit/left_side = 0
23:14/0/terrains_peering_bit/top_left_corner = 0
23:14/0/terrains_peering_bit/top_side = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
21:15/0/terrain_set = 0
21:15/0/terrain = 0
21:15/0/terrains_peering_bit/right_side = 0
21:15/0/terrains_peering_bit/top_side = 0
21:15/0/terrains_peering_bit/top_right_corner = 0
22:15/0 = 0
22:15/0/terrain_set = 0
22:15/0/terrain = 0
22:15/0/terrains_peering_bit/right_side = 0
22:15/0/terrains_peering_bit/left_side = 0
22:15/0/terrains_peering_bit/top_left_corner = 0
22:15/0/terrains_peering_bit/top_side = 0
22:15/0/terrains_peering_bit/top_right_corner = 0
23:15/0 = 0
23:15/0/terrain_set = 0
23:15/0/terrain = 0
23:15/0/terrains_peering_bit/left_side = 0
23:15/0/terrains_peering_bit/top_left_corner = 0
23:15/0/terrains_peering_bit/top_side = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0

[sub_resource type="TileSet" id="TileSet_vi2xj"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 1"
terrain_set_0/terrain_0/color = Color(0, 0.439216, 0.25098, 1)
terrain_set_1/mode = 0
terrain_set_1/terrain_0/name = "Terrain 0"
terrain_set_1/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
navigation_layer_0/layers = 1
sources/2 = SubResource("TileSetAtlasSource_xrsnc")

[node name="level" type="Node2D" groups=["map"]]
script = ExtResource("2_gf2dy")
metadata/_edit_vertical_guides_ = []

[node name="level_map" type="TileMap" parent="."]
position = Vector2(32, 32)
tile_set = SubResource("TileSet_vi2xj")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(655372, 1507330, 15, 589836, 1507330, 14, 524300, 1507330, 14, 458764, 1507330, 14, 393228, 1507330, 14, 327692, 1507330, 14, 262156, 1507330, 14, 196620, 1507330, 14, 131084, 1507330, 14, 65548, 1507330, 14, 12, 1507330, 13, 655371, 1441794, 15, 589835, 1441794, 14, 524299, 1441794, 14, 458763, 1441794, 14, 393227, 1441794, 14, 327691, 1441794, 14, 262155, 1441794, 14, 196619, 1441794, 14, 131083, 1441794, 14, 65547, 1441794, 14, 11, 1441794, 13, 655370, 1441794, 15, 589834, 1441794, 14, 524298, 1441794, 14, 458762, 1441794, 14, 393226, 1441794, 14, 327690, 1441794, 14, 262154, 1441794, 14, 196618, 1441794, 14, 131082, 1441794, 14, 65546, 1441794, 14, 10, 1441794, 13, 655369, 1441794, 15, 589833, 1441794, 14, 524297, 1441794, 14, 458761, 1441794, 14, 393225, 1441794, 14, 327689, 1441794, 14, 262153, 1441794, 14, 196617, 1441794, 14, 131081, 1441794, 14, 65545, 1441794, 14, 9, 1441794, 13, 655368, 1441794, 15, 589832, 1441794, 14, 524296, 1441794, 14, 458760, 1441794, 14, 393224, 1441794, 14, 327688, 1441794, 14, 262152, 1441794, 14, 196616, 1441794, 14, 131080, 1441794, 14, 65544, 1441794, 14, 8, 1441794, 13, 655367, 1441794, 15, 589831, 1441794, 14, 524295, 1441794, 14, 458759, 1441794, 14, 393223, 1441794, 14, 327687, 1441794, 14, 262151, 1441794, 14, 196615, 1441794, 14, 65543, 1441794, 14, 7, 1441794, 13, 655366, 1441794, 15, 589830, 1441794, 14, 524294, 1441794, 14, 458758, 1441794, 14, 393222, 1441794, 14, 327686, 1441794, 14, 262150, 1441794, 14, 196614, 1441794, 14, 131078, 1441794, 14, 65542, 1441794, 14, 6, 1441794, 13, 655365, 1441794, 15, 589829, 1441794, 14, 524293, 1441794, 14, 458757, 1441794, 14, 393221, 1441794, 14, 327685, 1441794, 14, 262149, 1441794, 14, 196613, 1441794, 14, 131077, 1441794, 14, 5, 1441794, 13, 655364, 1441794, 15, 589828, 1441794, 14, 524292, 1441794, 14, 458756, 1441794, 14, 393220, 1441794, 14, 327684, 1441794, 14, 262148, 1441794, 14, 196612, 1441794, 14, 131076, 1441794, 14, 65540, 1441794, 14, 4, 1441794, 13, 655363, 1441794, 15, 589827, 1441794, 14, 524291, 1441794, 14, 458755, 1441794, 14, 393219, 1441794, 14, 327683, 1441794, 14, 262147, 1441794, 14, 131075, 1441794, 14, 65539, 1441794, 14, 3, 1441794, 13, 655362, 1441794, 15, 589826, 1441794, 14, 524290, 1441794, 14, 458754, 1441794, 14, 393218, 1441794, 14, 327682, 1441794, 14, 262146, 1441794, 14, 131074, 1441794, 14, 65538, 1441794, 14, 2, 1441794, 13, 655361, 1441794, 15, 589825, 1441794, 14, 524289, 1441794, 14, 458753, 1441794, 14, 393217, 1441794, 14, 327681, 1441794, 14, 262145, 1441794, 14, 196609, 1441794, 14, 131073, 1441794, 14, 65537, 1441794, 14, 1, 1441794, 13, 655360, 1376258, 15, 589824, 1376258, 14, 524288, 1376258, 14, 458752, 1376258, 14, 393216, 1376258, 14, 327680, 1376258, 14, 262144, 1376258, 14, 196608, 1376258, 14, 131072, 1376258, 14, 65536, 1376258, 14, 0, 1376258, 13, 196610, 1441794, 14, 196611, 1441794, 14, 65541, 1441794, 14, 131079, 1441794, 14)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196612, 1310722, 6, 131080, 1310722, 6, 393222, 1310722, 6, 524289, 1310722, 6, 524298, 1310722, 6, 327690, 1310722, 6, 131074, 1310722, 6)

[node name="map_grid_tiles" type="Node2D" parent="."]

[node name="enemy_controller" type="Node" parent="."]
script = ExtResource("3_5hvvk")

[node name="enemy_actor" parent="enemy_controller" instance=ExtResource("5_0d166")]
position = Vector2(512, 448)
max_health = 14

[node name="enemy_actor2" parent="enemy_controller" instance=ExtResource("5_0d166")]
position = Vector2(448, 384)

[node name="player_units" type="Node" parent="."]

[node name="actor" parent="player_units" instance=ExtResource("6_lhelj")]
position = Vector2(384, 448)

[node name="map_camera" type="Camera2D" parent="."]
position = Vector2(448, 384)
zoom = Vector2(1.2, 1.2)
script = ExtResource("6_h63dk")

[node name="debug" type="Label" parent="map_camera"]
offset_left = 320.0
offset_top = -320.0
offset_right = 464.0
offset_bottom = -56.0
